--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 <version>1.0-SNAPSHOT</version>
 <packaging>maven-archetype</packaging>
 
+<properties>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
+  <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+</properties>
+
 <build>
   <extensions>
     <extension>
